Implement basic options page.

--- a/styles/options.sass
+++ b/styles/options.sass
@@ -1,2 +1,11 @@
-body
-  width: 800px
+#save-settings
+  width: 200px
+  margin-right: 20px
+
+#reset-settings
+  width: 200px
+  margin-left: 20px
+
+.form-group
+  height: 50px
+  margin-top: 30px
