Add popup window styles.

--- a/styles/popup.css
+++ b/styles/popup.css
@@ -1,1 +1,1 @@
-body{min-width:300px}
+body{min-width:250px}.page-header{margin-bottom:0 !important;margin-top:0 !important}#container{background-color:#f8f8ff}#title{color:#fff;margin-top:0 !important;padding-top:30px;text-align:center}#header{background-color:#16a085}#settings{cursor:pointer;background-color:#16a085;height:50px;padding:15px 60px}#settings:hover{background-color:#049372}#settings-text{color:#fff}#settings-icon{color:#fff;margin-right:5px}
