--- a/styles/popup.sass
+++ b/styles/popup.sass
@@ -1,2 +1,34 @@
 body
-  min-width: 300px
+  min-width: 250px
+
+.page-header
+  margin-bottom: 0 !important
+  margin-top: 0 !important
+
+#container
+  background-color: ghostwhite
+
+#title
+  color: white
+  margin-top: 0 !important
+  padding-top: 30px
+  text-align: center
+
+#header
+  background-color: rgb(22, 160, 133)
+
+#settings
+  cursor: pointer
+  background-color: rgb(22, 160, 133)
+  height: 50px
+  padding: 15px 60px
+
+#settings:hover
+  background-color: rgb(4, 147, 114)
+
+#settings-text
+  color: white
+
+#settings-icon
+  color: white
+  margin-right: 5px
