--- a/styles/options.css
+++ b/styles/options.css
@@ -1,1 +1,2 @@
 #save-settings{width:200px;margin-right:20px}#reset-settings{width:200px;margin-left:20px}.form-group{height:50px;margin-top:30px}
+/*# sourceMappingURL=options.css.map */
